Prevent accidental message clearing due to option hiding by opacity
Messages were being inadvertantly cleared on mobile because the delete
option was hidden by opacity. This allowed it to continue to receive
click events, so if you touched a message too close to the right edge
it would be cleared. Hiding by toggling the display property instead
avoids this.

--- a/app/less/app.less
+++ b/app/less/app.less
@@ -142,7 +142,7 @@ FOOTER {
         right: 0;
         height: 101%;
 	width: 8em;
-        opacity: 0;
+        display: none;
         transition: opacity 0.1s 0.2s;
 
         A {
@@ -207,7 +207,7 @@ FOOTER {
 }
 
 .message:hover .options {
-    opacity: 1;
+    display: block;
 }
 
 .message.focused {
