--- a/app/less/mediaqueries.less
+++ b/app/less/mediaqueries.less
@@ -31,15 +31,14 @@
     }
 
     .message:hover .options {
-        opacity: 0;
+        display: none;
     }
 
     .message.extended, .message.extended:hover {
         margin-left: -2.25em;
 
         .options {
-            opacity: 1;
-            transition-property: none;
+            display: block;
         }
     }
 
